crates/bitwarden-ffi/tests/compilation_tests/unknown_wasm_only_attribute.stderr
error: unknown attribute, expected `note`
 --> tests/compilation_tests/unknown_wasm_only_attribute.rs:7:17
  |
7 |     #[wasm_only(message = "hello")]
  |                 ^^^^^^^
