crates/bitwarden-ffi/tests/compilation_tests/unknown_wasm_only_attribute.rs
use bitwarden_ffi::wasm_export;

struct Foo;

#[wasm_export]
impl Foo {
    #[wasm_only(message = "hello")]
    pub fn bar() {}
}

fn main() {}
